# ai-content-crew

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: server.py
database/: models.py
examples/: curl_examples.sh  nodejs_client.js  python_client.py
knowledge/: user_preference.txt
src/research_and_blog_crew/: crew.py  main.py
src/research_and_blog_crew/config/: agents.yaml  settings.py  tasks.yaml
src/research_and_blog_crew/tools/: custom_tool.py
tests/: test_api.py
utils/: logger.py  retry.py
