[project]
name = "research_and_blog_crew"
version = "0.1.0"
description = "research_and_blog_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.76.0",
    "crewai[tools]>=0.193.2,<1.0.0",
    "fastapi>=0.128.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "python-json-logger>=4.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[project.scripts]
research_and_blog_crew = "research_and_blog_crew.main:run"
run_crew = "research_and_blog_crew.main:run"
train = "research_and_blog_crew.main:train"
replay = "research_and_blog_crew.main:replay"
test = "research_and_blog_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
