[project]
name = "research_and_blog_crew"
version = "0.1.0"
description = "research_and_blog_crew using crewAI"
authors = [
    { name = "Tanish Rajput", email = "tanishrajput9@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.76.0",
    "crewai[tools]>=0.193.2,<1.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "prometheus-client>=0.23.1",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-json-logger>=4.0.0",
    "sentry-sdk[fastapi]>=2.49.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[project.scripts]
research_and_blog_crew = "research_and_blog_crew.main:run"
run_crew = "research_and_blog_crew.main:run"
train = "research_and_blog_crew.main:train"
replay = "research_and_blog_crew.main:replay"
test = "research_and_blog_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ------------------------------
# Hatchling configuration
# Required for src/ layout
# ------------------------------
[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["research_and_blog_crew"]

# ------------------------------
# CrewAI configuration
# ------------------------------
[tool.crewai]
type = "crew"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
